[package]
name = "sentiment"
version = "0.1.1"
authors = ["shockham <samuel.hockham@gmail.com>", "kegesch <mail@yonny.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kegesch/sentiment-rs"
homepage = "https://github.com/kegesch/sentiment-rs"
documentation = "https://docs.rs/sentiment"
description = "Sentiment analysis tool"

[dependencies]
regex = "1.0"
serde_json = "1.0"
lazy_static = "1.0"
